--- a/src/App.css
+++ b/src/App.css
@@ -13,13 +13,14 @@
 }
 
 .dialog{
-position: relative;
+position: absolute;
 top:50%;
 left:50%;
-transform: translate(-50%,-50%);
-height:60%;
-width:60%;
+width:200px;
 background-color: white;
 box-shadow: 0 0 10px rgba(0,0,0,0.2);
 z-index: 120;
+margin: 0 200px;
 }
+
+
